succesfull create user, prodi, vahistory and make endpoint with it
