# middleware/input-validation.js
@@ -2,20 +2,42 @@ const { check } = require("express-validator");
 
 exports.createUserValidation = [
   check("nama", "Nama tidak boleh kosong").not().isEmpty(),
-  check("username", "Username tidak boleh kosong").not().isEmpty(),
-  check("telp", "Nomor Telpon tidak boleh kosong").not().isEmpty(),
-  check("email", "Email tidak valid").isEmail(),
+  check("nim", "NIM tidak boleh kosong").not().isEmpty(),
+  check("email", "Email harus valid!").isEmail(),
+  check("prodi", "Prodi tidak boleh kosong").not().isEmpty(),
   check("password", "Password minimal 6 karakter").isLength({ min: 6 }),
 ];
 
 exports.loginValidation = [
-  check("identity", "Identity tidak boleh kosong").not().isEmpty(),
+  check("nim", "NIM tidak boleh kosong").not().isEmpty(),
   check("password", "Password tidak boleh kosong").not().isEmpty(),
 ];
 
+
 exports.updateUserValidation = [
   check("nama", "Nama tidak boleh kosong").not().isEmpty(),
-  check("username", "Username tidak boleh kosong").not().isEmpty(),
-  check("telp", "Nomor Telepon tidak boleh kosong").not().isEmpty(),
-  check("email", "Email tidak valid").isEmail(),
+  // check("username", "Username tidak boleh kosong").not().isEmpty(),
+  // check("telp", "Nomor Telepon tidak boleh kosong").not().isEmpty(),
+  // check("email", "Email tidak valid").isEmail(),
+];
+
+exports.updatePasswordValidation = [
+  check("password", "Password tidak boleh kosong").not().isEmpty(),
+  check("new_password", "Password Baru minimal 6 karakter").isLength({ min: 6 }),
+];
+
+exports.forgotPasswordValidation = [
+  check("email", "Email harus valid!").isEmail(),
+];
+
+exports.resetPasswordValidation = [
+  check("email", "Email harus valid!").isEmail(),
+  check("password", "Password Baru minimal 6 karakter").isLength({ min: 6 }),
+];
+
+exports.insertHistoryVAValidation = [
+  check("user_id", "ID User tidak boleh kosong").not().isEmpty(),
+  check("va", "VA tidak boleh kosong").not().isEmpty(),
+  check("payment_category", "Kategori Pembayaran tidak boleh kosong").not().isEmpty(),
+  check("nominal", "Nominal Pembayaran tidak boleh kosong").not().isEmpty(),
 ];
